--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,19 +1,17 @@
 @media (min-width: 1024px) {
   .navbar {
-    background-color: #f0efed; 
+    background-color: #ffffff; 
     transition: background-color 0.3s ease;
     align-items: center;
     padding-top: 2%;
-    padding-bottom: 2%;
     justify-content: space-between;
   }
 }
 
 @media (min-width: 760px) and (max-width: 1023px) {
   .navbar {
-    background-color: #f0efed; /* TODO: Choose to make transparent or the high-fi color*/
+    background-color: #ffffff; /* TODO: Choose to make transparent or the high-fi color*/
     padding-top: 3%;
-    padding-bottom: 1%;
   }
 
   .navbar .logo {
@@ -37,7 +35,6 @@
   .navbar .bar-header {
     background-color: #ffffff;
     padding-right: 8%;
-    padding-bottom: 3.5%;
     align-items: center;
   }
 
