--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,16 +1,22 @@
 @media (min-width: 1024px) {
   .navbar {
-    background-color: #ffffff; 
+    position: fixed;
+    width: 100%;
+    background-color: #f0efed; 
     transition: background-color 0.3s ease;
     align-items: center;
-    padding-top: 2%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
     justify-content: space-between;
+    z-index: 50;
   }
 }
 
-@media (min-width: 760px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   .navbar {
-    background-color: #ffffff; /* TODO: Choose to make transparent or the high-fi color*/
+    position: fixed;
+    width: 100%;
+    background-color: #f0efed; /* TODO: Choose to make transparent or the high-fi color*/
     padding-top: 3%;
   }
 
@@ -26,20 +32,25 @@
 }
 
 
-@media (max-width: 760px) {
+@media (max-width: 767.2px) {
   .navbar {
-    background-color: #ffffff;
-    padding-top: 5%;
+    position: fixed;
+    width: 100%;
+    background-color: #f0efed;
+    padding-top: 4%;
+    padding-bottom: 2%;
   }
 
   .navbar .bar-header {
-    background-color: #ffffff;
+    width: 100%;
+    background-color: #f0efed;
     padding-right: 8%;
     align-items: center;
+    justify-content: space-between;
   }
 
   .navbar .logo {
-    background-color: #ffffff;
+    background-color: #f0efed;
     white-space: normal;
     font-size: 20px;
     line-height: 1.2;
@@ -57,15 +68,23 @@
 
   .navbar .mobile-menu {
     width: 100%;
-    background-color: #ffffff;
+    background-color: #f0efed;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .2s ease-in-out;
+  }
+
+  .navbar .mobile-menu.open {
+    max-height: 500px;
   }
 
   .navbar .mobile-menu a {
+    display: flex;
     font-size: 20px;
     color: #4e3629;
     padding: 3.5% 0;
-    text-align: center;
+    justify-content: center;
     border-bottom: 1px solid #f0efed;
   }
 
@@ -104,7 +123,7 @@
   }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 767.2px) {
   .navbar a {
     font-size: 19px;
   }
