--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,10 +1,8 @@
 @media (min-width: 1024px) {
   .navbar {
-    position: fixed;
     width: 100%;
-    position: fixed;
-    width: 100%;
-    background-color: #f0efed; 
+    background-color: transparent; 
+    box-shadow: 0 5px 6px -6px rgba(18, 18, 18, 0.2);
     transition: background-color 0.3s ease;
     align-items: center;
     padding-top: 1.5%;
@@ -16,11 +14,9 @@
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .navbar {
-    position: fixed;
     width: 100%;
-    position: fixed;
-    width: 100%;
-    background-color: #f0efed; /* TODO: Choose to make transparent or the high-fi color*/
+    background-color: transparent; 
+    box-shadow: 0 5px 6px -6px rgba(18, 18, 18, 0.2);
     padding-top: 3%;
   }
 
@@ -38,26 +34,21 @@
 
 @media (max-width: 767.2px) {
   .navbar {
-    position: fixed;
     width: 100%;
-    position: fixed;
-    width: 100%;
-    background-color: #f0efed;
+    background-color: transparent; 
+    box-shadow: 0 5px 6px -6px rgba(18, 18, 18, 0.2);
     padding-top: 4%;
     padding-bottom: 2%;
   }
 
   .navbar .bar-header {
     width: 100%;
-    width: 100%;
-    background-color: #f0efed;
     padding-right: 8%;
     align-items: center;
     justify-content: space-between;
   }
 
   .navbar .logo {
-    background-color: #f0efed;
     white-space: normal;
     font-size: 20px;
     line-height: 1.2;
@@ -75,8 +66,6 @@
 
   .navbar .mobile-menu {
     width: 100%;
-    background-color: #f0efed;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-height: 0;
     overflow: hidden;
     transition: max-height .2s ease-in-out;
@@ -93,7 +82,6 @@
     padding: 3.5% 0;
     justify-content: center;
     justify-items: center;
-    border-bottom: 1px solid #f0efed;
   }
 
   .navbar .scan-button,
