--- a/frontend/src/components/home/styles.css
+++ b/frontend/src/components/home/styles.css
@@ -2,3 +2,25 @@
     clip-path: path('M38.74% 10.81%C45.00% 7.87% 54.53% 0.17% 64.87% 3.28%C78.61% 7.42% 95.57% 15.33% 96.72% 29.53%C97.88% 43.75% 79.16% 50.10% 69.54% 60.74%C61.62% 77.83% 64.90% 95.69% 51.63% 95.75%C38.26% 95.81% 34.31% 77.62% 24.86% 68.27%C16.04% 54.86% 6.13% 52.18% 3.98% 43.81%C1.72% 34.96% 5.06% 25.17% 11.31% 20.64%C19.11% 13.69% 29.59% 14.70% 38.74% 10.81%Z');
     -webkit-clip-path: path('M38.74% 10.81%C45.00% 7.87% 54.53% 0.17% 64.87% 3.28%C78.61% 7.42% 95.57% 15.33% 96.72% 29.53%C97.88% 43.75% 79.16% 50.10% 69.54% 60.74%C61.62% 77.83% 64.90% 95.69% 51.63% 95.75%C38.26% 95.81% 34.31% 77.62% 24.86% 68.27%C16.04% 54.86% 6.13% 52.18% 3.98% 43.81%C1.72% 34.96% 5.06% 25.17% 11.31% 20.64%C19.11% 13.69% 29.59% 14.70% 38.74% 10.81%Z');
 }
+
+.scan-button {
+  background-color: #c24a00;
+  color: #ffffff;
+  height: 35px;
+  border-radius: 50px;
+  padding: 8px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-family: "Gantari", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.scan-button:hover {
+  background-color: #a74000;
+  color: #f0efed;
+}
